# cli

./: .envrc  Cargo.toml  build.sh  clippy.sh  readme.md  run.sh  todo.md  todo.txt  udeps.sh
.direnv/git/hooks/: pre-commit
capnp/: make.sh  msg.capnp  msg_capnp.rs
src/: listen.rs  macro.rs  main.rs
src/init/: log.rs  mod.rs
src/lib/: connecting.rs  kad.rs  leading_zero.rs  local_ip.rs  mod.rs  now.rs
src/var/: args.rs  cmd.rs  config.rs  ed25519.rs  mod.rs  root.rs
