[package]

name = "rmw-srv"
version = "0.0.1"
authors = [ "rmw <i@rmw.link>" ]
edition = "2018"

[dependencies]
base64 = "0.13.0"
blake3 = "0.3.7"
bytes = "1.0.1"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
dirs = "3.0.1"
ed25519-dalek-blake2b = "1.0.2"
failure = "0.1.8"
fern = "0.6.0"
lazy_static = "1.4.0"
log = "0.4.14"
rand = "0.8.3"
zstd = "0.6.0"
machine-uid = "0.2.0"
seahash = "4.1.0"
indexmap = "1.6.1"
x25519-dalek = { version = "1.1.0", features = ["serde"] }
aes-gcm = "0.8.0"
sqlx = { version = "0.5.1", features = ["runtime-async-std-rustls","macros","sqlite"] }
hnsw = "0.6.1"
array-init = "1.0.0"
skiplist = "0.3.0"

[dependencies.async-std]
version = "1.9.0"
features = ["unstable","attributes"]

